--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -1,65 +1,53 @@
 name: CI
+
 on:
-  - push
-  - pull_request
+  push:
+    branches: [ master, main ]
+  pull_request:
+    branches: [ master, main ]
+
 jobs:
   test:
-    name: Julia ${{ matrix.version }} - ${{ matrix.os }} - ${{ matrix.arch }} - ${{ github.event_name }}
+    name: Runtests (Julia ${{ matrix.julia }} • ${{ matrix.os }})
     runs-on: ${{ matrix.os }}
     strategy:
       fail-fast: false
       matrix:
-        version:
-          - '1.6'
-          - '1.7'
-          - 'nightly'
-        os:
-          - ubuntu-latest
-        arch:
-          - x64
+        os: [ubuntu-latest, macos-latest, windows-latest]
+        julia: ['1.6', '1.10', '1']
     steps:
-      - uses: actions/checkout@v2
-      - uses: julia-actions/setup-julia@v1
+      - uses: actions/checkout@v4
+      - uses: julia-actions/setup-julia@v2
         with:
-          version: ${{ matrix.version }}
-          arch: ${{ matrix.arch }}
-      - uses: actions/cache@v1
-        env:
-          cache-name: cache-artifacts
-        with:
-          path: ~/.julia/artifacts
-          key: ${{ runner.os }}-test-${{ env.cache-name }}-${{ hashFiles('**/Project.toml') }}
-          restore-keys: |
-            ${{ runner.os }}-test-${{ env.cache-name }}-
-            ${{ runner.os }}-test-
-            ${{ runner.os }}-
-      - uses: julia-actions/julia-buildpkg@v1
-      - uses: julia-actions/julia-runtest@v1
-      - uses: julia-actions/julia-processcoverage@v1
-      - uses: codecov/codecov-action@v1
-        with:
-          file: lcov.info
+          version: ${{ matrix.julia }}
+      - uses: julia-actions/cache@v1
+      - name: Instantiate
+        run: julia --color=yes -e 'using Pkg; Pkg.instantiate()'
+      - name: Run tests
+        run: julia --color=yes --project -e 'using Pkg; Pkg.test(; coverage=false)'
+
   docs:
-    name: Documentation
+    name: Docs
     runs-on: ubuntu-latest
+    permissions:
+      contents: write
     steps:
-      - uses: actions/checkout@v2
-      - uses: julia-actions/setup-julia@v1
+      - uses: actions/checkout@v4
+      - uses: julia-actions/setup-julia@v2
         with:
           version: '1'
-      - run: |
+      - name: Doctest
+        run: |
           julia --project=docs -e '
-            using Pkg
-            Pkg.develop(PackageSpec(path=pwd()))
-            Pkg.instantiate()'
-      - run: |
-          julia --project=docs -e '
+            using Pkg; Pkg.develop(path=pwd()); Pkg.instantiate()
             using Documenter: DocMeta, doctest
             using PGA2D
             DocMeta.setdocmeta!(PGA2D, :DocTestSetup, :(using PGA2D); recursive=true)
             doctest(PGA2D)'
-      - run: julia --project=docs docs/make.jl
+      - name: Build and deploy docs
         env:
-          JULIA_PKG_SERVER: ""
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           DOCUMENTER_KEY: ${{ secrets.DOCUMENTER_KEY }}
+        run: |
+          julia --project=docs -e 'using Pkg; Pkg.develop(path=pwd()); Pkg.instantiate()'
+          julia --project=docs docs/make.jl
