--- a/Project.toml
+++ b/Project.toml
@@ -5,12 +5,16 @@ version = "0.1.0"
 
 [deps]
 CliffordAlgebras = "ca841f6f-225c-4bbd-a467-7a3512dfa6f6"
-Plots = "91a5bcdd-55d7-5caf-9e0b-520d859cae80"
 
 [compat]
 julia = "1.6"
-Plots = "1"
 CliffordAlgebras = "0.1.1"
+
+[weakdeps]
+Plots = "91a5bcdd-55d7-5caf-9e0b-520d859cae80"
+
+[extensions]
+PGA2DPlotsExt = ["Plots"]
 
 [extras]
 Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
