CI: ensure --project instantiate/build/test for reliable env resolution across Julia versions

--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -21,8 +21,10 @@ jobs:
         with:
           version: ${{ matrix.julia }}
       - uses: julia-actions/cache@v1
+      - name: Build package
+        run: julia --color=yes --project -e 'using Pkg; Pkg.build()'
       - name: Instantiate
-        run: julia --color=yes -e 'using Pkg; Pkg.instantiate()'
+        run: julia --color=yes --project -e 'using Pkg; Pkg.instantiate()'
       - name: Run tests
         run: julia --color=yes --project -e 'using Pkg; Pkg.test(; coverage=false)'
 
